--- a/code/Makefile.define-user
+++ b/code/Makefile.define-user
@@ -85,6 +85,7 @@ USER_FLAVORS=$(ORIG_FLAVORS)
 #$(eval $(call define-flavor,step3,userprog filesys-stub,synchconsole.cc userthread.cc usersemaphore.cc))
 #$(eval $(call define-flavor,step3,userprog filesys-stub,synchconsole.cc userthread.cc usersemaphore.cc synchtests.cc))
 #$(eval $(call define-flavor,step3,userprog filesys-stub,synchconsole.cc userthread.cc usersemaphore.cc))
+#$(eval $(call define-flavor,step4,userprog filesys-stub , synchconsole.cc #userthread.cc usersemaphore.cc frameprovider.cc synchtests.cc ))
 # $(eval $(call define-flavor,step5,userprog filesys,\
 #     synchconsole.cc userthread.cc))
 # $(eval $(call define-flavor,mynetwork,userprog filesys-stub network, \
@@ -92,6 +93,7 @@ USER_FLAVORS=$(ORIG_FLAVORS)
 # $(eval $(call define-flavor,final,userprog filesys network,\
 #     synchconsole.cc userthread.cc synchtests.cc))
 
-USER_FLAVORS=step4
+USER_FLAVORS=step5
+$(eval $(call define-flavor,step5,userprog filesys,\
+    synchconsole.cc userthread.cc usersemaphore.cc frameprovider.cc synchtests.cc))
 
-$(eval $(call define-flavor,step4,userprog filesys-stub , synchconsole.cc userthread.cc usersemaphore.cc frameprovider.cc synchtests.cc ))
