--- a/code/Makefile.define-user
+++ b/code/Makefile.define-user
@@ -81,8 +81,8 @@ USER_FLAVORS=$(ORIG_FLAVORS)
 # to the personal flavors
 # USER_FLAVORS=step2 step5 mynetwork final
 
-USER_FLAVORS=step2
-$(eval $(call define-flavor,step2,userprog filesys-stub,synchconsole.cc))
+USER_FLAVORS=step4
+#$(eval $(call define-flavor,step2,userprog filesys-stub,synchconsole.cc))
 
 # $(eval $(call define-flavor,step5,userprog filesys,\
 #     synchconsole.cc userthread.cc))
@@ -91,3 +91,5 @@ $(eval $(call define-flavor,step2,userprog filesys-stub,synchconsole.cc))
 # $(eval $(call define-flavor,final,userprog filesys network,\
 #     synchconsole.cc userthread.cc))
 
+ $(eval $(call define-flavor,step4,userprog filesys-stub ,\
+     synchconsole.cc frameprovider.cc linkedlist.cc process.cc))
