--- a/code/Makefile.define-user
+++ b/code/Makefile.define-user
@@ -92,6 +92,6 @@ USER_FLAVORS=$(ORIG_FLAVORS)
 # $(eval $(call define-flavor,final,userprog filesys network,\
 #     synchconsole.cc userthread.cc synchtests.cc))
 
-USER_FLAVORS=step4
+USER_FLAVORS=step6
 
-$(eval $(call define-flavor,step4,userprog filesys-stub , synchconsole.cc userthread.cc usersemaphore.cc frameprovider.cc synchtests.cc ))
+$(eval $(call define-flavor,step6,userprog filesys-stub network, synchconsole.cc userthread.cc usersemaphore.cc frameprovider.cc synchtests.cc ))
