--- a/code/Makefile.define-user
+++ b/code/Makefile.define-user
@@ -92,6 +92,8 @@ USER_FLAVORS=$(ORIG_FLAVORS)
 # $(eval $(call define-flavor,final,userprog filesys network,\
 #     synchconsole.cc userthread.cc synchtests.cc))
 
-USER_FLAVORS=step4
+USER_FLAVORS=step5
 
-$(eval $(call define-flavor,step4,userprog filesys-stub , synchconsole.cc userthread.cc usersemaphore.cc frameprovider.cc synchtests.cc ))
+$(eval $(call define-flavor,step5,userprog filesys, synchconsole.cc userthread.cc usersemaphore.cc frameprovider.cc synchtests.cc ))
+
+#$(eval $(call define-flavor,step4,userprog filesys-stub , synchconsole.cc userthread.cc usersemaphore.cc frameprovider.cc synchtests.cc ))
