--- a/code/Makefile.define-user
+++ b/code/Makefile.define-user
@@ -94,6 +94,6 @@ USER_FLAVORS=$(ORIG_FLAVORS)
 
 USER_FLAVORS=step5
 
-$(eval $(call define-flavor,step5,userprog filesys, synchconsole.cc userthread.cc usersemaphore.cc frameprovider.cc synchtests.cc ))
+$(eval $(call define-flavor,step5,userprog filesys, synchconsole.cc userthread.cc usersemaphore.cc frameprovider.cc synchtests.cc openfiletable.cc))
 
-#$(eval $(call define-flavor,step4,userprog filesys-stub , synchconsole.cc userthread.cc usersemaphore.cc frameprovider.cc synchtests.cc ))
+#$(eval $(call define-flavor,step4,userprog filesys-stub , synchconsole.cc userthread.cc usersemaphore.cc frameprovider.cc synchtests.cc  ))
